spacing fix

--- a/app/_components/course/CourseCard/CourseCard.module.css
+++ b/app/_components/course/CourseCard/CourseCard.module.css
@@ -98,6 +98,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
+  margin-bottom: 10px;
 }
 .tags {
   display: flex;
@@ -124,7 +125,6 @@
   width: 100%;
   height: 40px;
 }
-
 
 /* .truncate {
   display: -webkit-box;
